<resources>
    <string name="app_name">ArAvisa 2.0</string>
    <string name="title_activity_base">Base</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="nav_header_title">Glauco Batista de Sousa</string>
    <string name="nav_header_subtitle">glaucogti@gmail.com</string>
    <string name="nav_header_desc">Navegação</string>
    <string name="action_settings">Configurações</string>
    <string name="logo_aravisa">Logo ArAvisa</string>
    <string name="minhas_requisicoes">Minhas Requisições</string>
    <string name="nova_requisicao">Nova Requisicao</string>
    <string name="descricao_problema">Descreva a Situação</string>
    <string name="situacao">Situação</string>
    <string name="localizacao">Localização</string>
    <string name="localizacao_atual">Localização Atual</string>
    <string name="endereco_localizacao">Descreva o endereço/localização</string>



</resources>