<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Requisicao">


  <Button
      android:id="@+id/btnEnviar"
      style="@style/Widget.AppCompat.Button.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="alerta()"
      android:text="Enviar Requisição"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/btnTirarFoto"
      style="@style/Widget.AppCompat.Button.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="Registrar Imagem"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editEndereco" />

  <ImageView
      android:id="@+id/foto_registrada"
      android:layout_width="290dp"
      android:layout_height="293dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      app:layout_constraintBottom_toTopOf="@+id/btnEnviar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.493"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnTirarFoto"
      tools:srcCompat="@tools:sample/backgrounds/scenic" />

  <EditText
      android:id="@+id/editProblema"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:hint="@string/descricao_problema"
      android:inputType="text|textMultiLine"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtsituacao" />

  <EditText
      android:id="@+id/editEndereco"
      android:layout_width="286dp"
      android:layout_height="45dp"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="16dp"
      android:hint="@string/endereco_localizacao"
      app:layout_constraintEnd_toStartOf="@+id/btnLocalizacaoAtual"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/localizacao" />

  <TextView
      android:id="@+id/txtsituacao"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/situacao"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/localizacao"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/localizacao"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editProblema" />

  <Button
      android:id="@+id/btnLocalizacaoAtual"
      android:layout_width="122dp"
      android:layout_height="62dp"
      style="@style/Widget.AppCompat.Button.Colored"
      android:text="@string/localizacao_atual"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/localizacao" />

</androidx.constraintlayout.widget.ConstraintLayout>